# practice

./: .gitignore  Cargo.toml  README.md
RAT_0/agent/src/: config.rs  error.rs  init.rs  run.rs
RAT_0/client/: Cargo.toml
RAT_0/client/src/api/: agents.rs
RAT_0/client/src/cli/: jobs.rs  mod.rs
RAT_0/server/src/: config.rs  db.rs  entities.rs
RAT_0/server/src/api/: mod.rs  state.rs
RAT_0/server/src/api/routes/: agents.rs
RAT_0/server/src/service/: agents.rs  jobs.rs
RAT_1/: Cargo.toml  README.md
RAT_1/agent/src/: config.rs  error.rs  init.rs  run.rs
RAT_1/client/: Cargo.toml
RAT_1/client/src/api/: agents.rs  jobs.rs  mod.rs
RAT_1/client/src/cli/: jobs.rs
RAT_1/server/: Cargo.toml
RAT_1/server/db/migrations/: 001_init.sql
RAT_1/server/src/: config.rs  entities.rs
RAT_1/server/src/api/routes/: agents.rs  index.rs
RAT_1/server/src/repository/: agents.rs  jobs.rs  mod.rs
RAT_1/server/src/service/: agents.rs  mod.rs
agent/: Cargo.toml  README.md
agent/src/: config.rs  error.rs  init.rs  main.rs  run.rs
client/: Cargo.toml  README.md
client/src/: config.rs  error.rs  main.rs
client/src/api/: jobs.rs  mod.rs
client/src/cli/: agents.rs  exec.rs  mod.rs  signing.rs
crawler/: README.md
crawler/src/: crawler.rs
crawler/src/spiders/: cvedetails.rs
server/: Cargo.toml  README.md
server/db/migrations/: 001_init.sql
server/src/: entities.rs  error.rs  main.rs  share.rs
server/src/api/routes/: agents.rs  jobs.rs  mod.rs
server/src/repository/: agents.rs  jobs.rs
server/src/service/: agents.rs  jobs.rs  mod.rs
src/: main.rs
src/spiders/: mod.rs
