[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.87"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
log = "0.4.27"
env_logger = "0.11.7"
select = "0.6.1"
