[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
ed25519-dalek = "2.1"
x25519-dalek = "2"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
blake2 = "0.10.6"
zeroize = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
