[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8"
signature = "2.1.0" 
x25519-dalek = "2"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
blake2 = "0.10"
zeroize = "1"
thiserror = "2"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
