[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.27"
thiserror = "2.0.12"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "uuid", "json", "postgres", "migrate", "chrono", "time" ] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.7"
warp = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"]}
uuid = { version = "1", features = ["v4", "serde"] }



