[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2"
clap = { version = "4.5.34", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"]}
uuid = { version = "1", features = ["v4", "serde"] }
comfy-table = "7.1.4"
