[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2"
clap = { version = "4.5.34", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"]}
uuid = { version = "1", features = ["v4", "serde"] }
comfy-table = "7.1.4"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8"
x25519-dalek = "2"
blake2 = "0.10"
serde_json = "1"
chacha20poly1305 = "0.10.1"
zeroize = "1"


